# biogears-core

./: local.sh
projects/: CMakeLists.txt
projects/biogears/libBiogears/: CMakeLists.txt
projects/biogears/libBiogears/include/biogears/: xver.h
projects/biogears/libBiogears/include/biogears/cdm/substance/: SESubstance.h
projects/biogears/libBiogears/include/biogears/cdm/utils/unitconversion/: QuantityConversionKey.h
projects/biogears/libBiogears/include/biogears/engine/: BioGearsPhysiologyEngine.h
projects/biogears/libBiogears/include/biogears/engine/Controller/: BioGears.h  BioGearsCircuits.h  BioGearsEngine.h
projects/biogears/libBiogears/include/biogears/engine/Systems/: BloodChemistry.h  Cardiovascular.h  Energy.h  Nervous.h
projects/biogears/libBiogears/src/cdm/engine/: PhysiologyEngineTrack.cpp
projects/biogears/libBiogears/src/cdm/substance/: SESubstance.cpp
projects/biogears/libBiogears/src/cdm/utils/unitconversion/: UnitConversionEngine.cpp
projects/biogears/libBiogears/src/engine/Controller/: BioGears.cpp  BioGearsEngine.cpp  BioGearsSubstances.cpp
projects/biogears/libBiogears/src/engine/Systems/: BloodChemistry.cpp  Cardiovascular.cpp  Energy.cpp  Nervous.cpp
projects/biogears/libCDM/: CMakeLists.txt
projects/biogears/libIO/: CMakeLists.txt
projects/cli/: bg-scenario-main.cpp
projects/howto/BurnWoundPainStimulus/src/: HowTo-BurnWoundPainStimulus.cpp
projects/mltest/: CMakeLists.txt
projects/mltest/src/: main.cpp
